--- a/doc/Распиновка/Panel429ZIT6/Panel429ZIT6.ioc
+++ b/doc/Распиновка/Panel429ZIT6/Panel429ZIT6.ioc
@@ -12,72 +12,86 @@ Mcu.IP4=SYS
 Mcu.IPNb=5
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
-Mcu.Pin0=PF0
-Mcu.Pin1=PF1
-Mcu.Pin10=PB0
-Mcu.Pin11=PB1
-Mcu.Pin12=PF12
-Mcu.Pin13=PF13
-Mcu.Pin14=PF14
-Mcu.Pin15=PF15
-Mcu.Pin16=PG0
-Mcu.Pin17=PG1
-Mcu.Pin18=PE7
-Mcu.Pin19=PE8
-Mcu.Pin2=PF2
-Mcu.Pin20=PE9
-Mcu.Pin21=PE10
-Mcu.Pin22=PE11
-Mcu.Pin23=PE12
-Mcu.Pin24=PE13
-Mcu.Pin25=PE14
-Mcu.Pin26=PE15
-Mcu.Pin27=PB10
-Mcu.Pin28=PB11
-Mcu.Pin29=PD8
-Mcu.Pin3=PF3
-Mcu.Pin30=PD9
-Mcu.Pin31=PD10
-Mcu.Pin32=PD11
-Mcu.Pin33=PD12
-Mcu.Pin34=PD13
-Mcu.Pin35=PD14
-Mcu.Pin36=PD15
-Mcu.Pin37=PG2
-Mcu.Pin38=PG3
-Mcu.Pin39=PG4
-Mcu.Pin4=PF4
-Mcu.Pin40=PG5
-Mcu.Pin41=PG6
-Mcu.Pin42=PG7
-Mcu.Pin43=PC6
-Mcu.Pin44=PC7
-Mcu.Pin45=PA11
-Mcu.Pin46=PA12
-Mcu.Pin47=PA13
-Mcu.Pin48=PA14
-Mcu.Pin49=PA15
-Mcu.Pin5=PF5
-Mcu.Pin50=PC10
-Mcu.Pin51=PD0
-Mcu.Pin52=PD1
-Mcu.Pin53=PD3
-Mcu.Pin54=PD4
-Mcu.Pin55=PD5
-Mcu.Pin56=PD6
-Mcu.Pin57=PD7
-Mcu.Pin58=PG10
-Mcu.Pin59=PG11
-Mcu.Pin6=PF10
-Mcu.Pin60=PG12
-Mcu.Pin61=PB3
-Mcu.Pin62=PB8
-Mcu.Pin63=PB9
-Mcu.Pin64=VP_SYS_VS_Systick
-Mcu.Pin7=PA3
-Mcu.Pin8=PA4
-Mcu.Pin9=PA6
-Mcu.PinsNb=65
+Mcu.Pin0=PE2
+Mcu.Pin1=PE3
+Mcu.Pin10=PF4
+Mcu.Pin11=PF5
+Mcu.Pin12=PF10
+Mcu.Pin13=PA3
+Mcu.Pin14=PA4
+Mcu.Pin15=PA6
+Mcu.Pin16=PB0
+Mcu.Pin17=PB1
+Mcu.Pin18=PF12
+Mcu.Pin19=PF13
+Mcu.Pin2=PE4
+Mcu.Pin20=PF14
+Mcu.Pin21=PF15
+Mcu.Pin22=PG0
+Mcu.Pin23=PG1
+Mcu.Pin24=PE7
+Mcu.Pin25=PE8
+Mcu.Pin26=PE9
+Mcu.Pin27=PE10
+Mcu.Pin28=PE11
+Mcu.Pin29=PE12
+Mcu.Pin3=PE5
+Mcu.Pin30=PE13
+Mcu.Pin31=PE14
+Mcu.Pin32=PE15
+Mcu.Pin33=PB10
+Mcu.Pin34=PB11
+Mcu.Pin35=PD8
+Mcu.Pin36=PD9
+Mcu.Pin37=PD10
+Mcu.Pin38=PD11
+Mcu.Pin39=PD12
+Mcu.Pin4=PE6
+Mcu.Pin40=PD13
+Mcu.Pin41=PD14
+Mcu.Pin42=PD15
+Mcu.Pin43=PG2
+Mcu.Pin44=PG3
+Mcu.Pin45=PG4
+Mcu.Pin46=PG5
+Mcu.Pin47=PG6
+Mcu.Pin48=PG7
+Mcu.Pin49=PC6
+Mcu.Pin5=PC13
+Mcu.Pin50=PC7
+Mcu.Pin51=PA11
+Mcu.Pin52=PA12
+Mcu.Pin53=PA13
+Mcu.Pin54=PA14
+Mcu.Pin55=PA15
+Mcu.Pin56=PC10
+Mcu.Pin57=PD0
+Mcu.Pin58=PD1
+Mcu.Pin59=PD3
+Mcu.Pin6=PF0
+Mcu.Pin60=PD4
+Mcu.Pin61=PD5
+Mcu.Pin62=PD6
+Mcu.Pin63=PD7
+Mcu.Pin64=PG10
+Mcu.Pin65=PG11
+Mcu.Pin66=PG12
+Mcu.Pin67=PG13
+Mcu.Pin68=PG14
+Mcu.Pin69=PG15
+Mcu.Pin7=PF1
+Mcu.Pin70=PB3
+Mcu.Pin71=PB5
+Mcu.Pin72=PB6
+Mcu.Pin73=PB7
+Mcu.Pin74=PB8
+Mcu.Pin75=PB9
+Mcu.Pin76=PE0
+Mcu.Pin77=PE1
+Mcu.Pin78=VP_SYS_VS_Systick
+Mcu.Pin8=PF2
+Mcu.Pin9=PF3
+Mcu.PinsNb=79
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -120,12 +134,28 @@ PB11.Mode=RGB666
 PB11.Signal=LTDC_G5
 PB3.Mode=JTAG_4_pins
 PB3.Signal=SYS_JTDO-SWO
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=SL3
+PB5.Locked=true
+PB5.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=SL4
+PB6.Locked=true
+PB6.Signal=GPIO_Output
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=SL5
+PB7.Locked=true
+PB7.Signal=GPIO_Output
 PB8.Mode=RGB666
 PB8.Signal=LTDC_B6
 PB9.Mode=RGB666
 PB9.Signal=LTDC_B7
 PC10.Mode=RGB666
 PC10.Signal=LTDC_R2
+PC13.GPIOParameters=GPIO_Label
+PC13.GPIO_Label=RL5
+PC13.Locked=true
+PC13.Signal=GPIO_Input
 PC6.Mode=RGB666
 PC6.Signal=LTDC_HSYNC
 PC7.Mode=RGB666
@@ -148,12 +178,40 @@ PD7.Mode=NorPsramChipSelect1_1
 PD7.Signal=FMC_NE1
 PD8.Signal=FMC_D13_DA13
 PD9.Signal=FMC_D14_DA14
+PE0.GPIOParameters=GPIO_Label
+PE0.GPIO_Label=SL6
+PE0.Locked=true
+PE0.Signal=GPIO_Output
+PE1.GPIOParameters=GPIO_Label
+PE1.GPIO_Label=SL7
+PE1.Locked=true
+PE1.Signal=GPIO_Output
 PE10.Signal=FMC_D7_DA7
 PE11.Signal=FMC_D8_DA8
 PE12.Signal=FMC_D9_DA9
 PE13.Signal=FMC_D10_DA10
 PE14.Signal=FMC_D11_DA11
 PE15.Signal=FMC_D12_DA12
+PE2.GPIOParameters=GPIO_Label
+PE2.GPIO_Label=RL0
+PE2.Locked=true
+PE2.Signal=GPIO_Input
+PE3.GPIOParameters=GPIO_Label
+PE3.GPIO_Label=RL1
+PE3.Locked=true
+PE3.Signal=GPIO_Input
+PE4.GPIOParameters=GPIO_Label
+PE4.GPIO_Label=RL2
+PE4.Locked=true
+PE4.Signal=GPIO_Input
+PE5.GPIOParameters=GPIO_Label
+PE5.GPIO_Label=RL3
+PE5.Locked=true
+PE5.Signal=GPIO_Input
+PE6.GPIOParameters=GPIO_Label
+PE6.GPIO_Label=RL4
+PE6.Locked=true
+PE6.Signal=GPIO_Input
 PE7.Signal=FMC_D4_DA4
 PE8.Signal=FMC_D5_DA5
 PE9.Signal=FMC_D6_DA6
@@ -177,6 +235,18 @@ PG11.Mode=RGB666
 PG11.Signal=LTDC_B3
 PG12.Mode=RGB666
 PG12.Signal=LTDC_B4
+PG13.GPIOParameters=GPIO_Label
+PG13.GPIO_Label=SL0
+PG13.Locked=true
+PG13.Signal=GPIO_Output
+PG14.GPIOParameters=GPIO_Label
+PG14.GPIO_Label=SL1
+PG14.Locked=true
+PG14.Signal=GPIO_Output
+PG15.GPIOParameters=GPIO_Label
+PG15.GPIO_Label=SL2
+PG15.Locked=true
+PG15.Signal=GPIO_Output
 PG2.Signal=FMC_A12
 PG3.Signal=FMC_A13
 PG4.Signal=FMC_A14_BA0
