--- a/doc/Распиновка/Panel429ZIT6/Panel429ZIT6.ioc
+++ b/doc/Распиновка/Panel429ZIT6/Panel429ZIT6.ioc
@@ -14,84 +14,98 @@ Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PF4
-Mcu.Pin11=PF5
-Mcu.Pin12=PF10
-Mcu.Pin13=PA3
-Mcu.Pin14=PA4
-Mcu.Pin15=PA6
-Mcu.Pin16=PB0
-Mcu.Pin17=PB1
-Mcu.Pin18=PF12
-Mcu.Pin19=PF13
+Mcu.Pin10=PF2
+Mcu.Pin11=PF3
+Mcu.Pin12=PF4
+Mcu.Pin13=PF5
+Mcu.Pin14=PF6
+Mcu.Pin15=PF7
+Mcu.Pin16=PF8
+Mcu.Pin17=PF9
+Mcu.Pin18=PF10
+Mcu.Pin19=PC0
 Mcu.Pin2=PE4
-Mcu.Pin20=PF14
-Mcu.Pin21=PF15
-Mcu.Pin22=PG0
-Mcu.Pin23=PG1
-Mcu.Pin24=PE7
-Mcu.Pin25=PE8
-Mcu.Pin26=PE9
-Mcu.Pin27=PE10
-Mcu.Pin28=PE11
-Mcu.Pin29=PE12
+Mcu.Pin20=PC1
+Mcu.Pin21=PC2
+Mcu.Pin22=PC3
+Mcu.Pin23=PA3
+Mcu.Pin24=PA4
+Mcu.Pin25=PA6
+Mcu.Pin26=PB0
+Mcu.Pin27=PB1
+Mcu.Pin28=PF12
+Mcu.Pin29=PF13
 Mcu.Pin3=PE5
-Mcu.Pin30=PE13
-Mcu.Pin31=PE14
-Mcu.Pin32=PE15
-Mcu.Pin33=PB10
-Mcu.Pin34=PB11
-Mcu.Pin35=PD8
-Mcu.Pin36=PD9
-Mcu.Pin37=PD10
-Mcu.Pin38=PD11
-Mcu.Pin39=PD12
+Mcu.Pin30=PF14
+Mcu.Pin31=PF15
+Mcu.Pin32=PG0
+Mcu.Pin33=PG1
+Mcu.Pin34=PE7
+Mcu.Pin35=PE8
+Mcu.Pin36=PE9
+Mcu.Pin37=PE10
+Mcu.Pin38=PE11
+Mcu.Pin39=PE12
 Mcu.Pin4=PE6
-Mcu.Pin40=PD13
-Mcu.Pin41=PD14
-Mcu.Pin42=PD15
-Mcu.Pin43=PG2
-Mcu.Pin44=PG3
-Mcu.Pin45=PG4
-Mcu.Pin46=PG5
-Mcu.Pin47=PG6
-Mcu.Pin48=PG7
-Mcu.Pin49=PC6
+Mcu.Pin40=PE13
+Mcu.Pin41=PE14
+Mcu.Pin42=PE15
+Mcu.Pin43=PB10
+Mcu.Pin44=PB11
+Mcu.Pin45=PD8
+Mcu.Pin46=PD9
+Mcu.Pin47=PD10
+Mcu.Pin48=PD11
+Mcu.Pin49=PD12
 Mcu.Pin5=PC13
-Mcu.Pin50=PC7
-Mcu.Pin51=PA11
-Mcu.Pin52=PA12
-Mcu.Pin53=PA13
-Mcu.Pin54=PA14
-Mcu.Pin55=PA15
-Mcu.Pin56=PC10
-Mcu.Pin57=PD0
-Mcu.Pin58=PD1
-Mcu.Pin59=PD3
-Mcu.Pin6=PF0
-Mcu.Pin60=PD4
-Mcu.Pin61=PD5
-Mcu.Pin62=PD6
-Mcu.Pin63=PD7
-Mcu.Pin64=PG10
-Mcu.Pin65=PG11
-Mcu.Pin66=PG12
-Mcu.Pin67=PG13
-Mcu.Pin68=PG14
-Mcu.Pin69=PG15
-Mcu.Pin7=PF1
-Mcu.Pin70=PB3
-Mcu.Pin71=PB5
-Mcu.Pin72=PB6
-Mcu.Pin73=PB7
-Mcu.Pin74=PB8
-Mcu.Pin75=PB9
-Mcu.Pin76=PE0
-Mcu.Pin77=PE1
-Mcu.Pin78=VP_SYS_VS_Systick
-Mcu.Pin8=PF2
-Mcu.Pin9=PF3
-Mcu.PinsNb=79
+Mcu.Pin50=PD13
+Mcu.Pin51=PD14
+Mcu.Pin52=PD15
+Mcu.Pin53=PG2
+Mcu.Pin54=PG3
+Mcu.Pin55=PG4
+Mcu.Pin56=PG5
+Mcu.Pin57=PG6
+Mcu.Pin58=PG7
+Mcu.Pin59=PC6
+Mcu.Pin6=PC14/OSC32_IN
+Mcu.Pin60=PC7
+Mcu.Pin61=PC8
+Mcu.Pin62=PC9
+Mcu.Pin63=PA11
+Mcu.Pin64=PA12
+Mcu.Pin65=PA13
+Mcu.Pin66=PA14
+Mcu.Pin67=PA15
+Mcu.Pin68=PC10
+Mcu.Pin69=PC11
+Mcu.Pin7=PC15/OSC32_OUT
+Mcu.Pin70=PC12
+Mcu.Pin71=PD0
+Mcu.Pin72=PD1
+Mcu.Pin73=PD3
+Mcu.Pin74=PD4
+Mcu.Pin75=PD5
+Mcu.Pin76=PD6
+Mcu.Pin77=PD7
+Mcu.Pin78=PG10
+Mcu.Pin79=PG11
+Mcu.Pin8=PF0
+Mcu.Pin80=PG12
+Mcu.Pin81=PG13
+Mcu.Pin82=PG14
+Mcu.Pin83=PG15
+Mcu.Pin84=PB3
+Mcu.Pin85=PB5
+Mcu.Pin86=PB6
+Mcu.Pin87=PB7
+Mcu.Pin88=PB8
+Mcu.Pin89=PB9
+Mcu.Pin9=PF1
+Mcu.Pin90=PE0
+Mcu.Pin91=PE1
+Mcu.Pin92=VP_SYS_VS_Systick
+Mcu.PinsNb=93
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -135,31 +149,71 @@ PB11.Signal=LTDC_G5
 PB3.Mode=JTAG_4_pins
 PB3.Signal=SYS_JTDO-SWO
 PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=SL3
+PB5.GPIO_Label=RL3
 PB5.Locked=true
 PB5.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=SL4
+PB6.GPIO_Label=RL4
 PB6.Locked=true
 PB6.Signal=GPIO_Output
 PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=SL5
+PB7.GPIO_Label=RL5
 PB7.Locked=true
 PB7.Signal=GPIO_Output
 PB8.Mode=RGB666
 PB8.Signal=LTDC_B6
 PB9.Mode=RGB666
 PB9.Signal=LTDC_B7
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=SL4
+PC0.Locked=true
+PC0.Signal=GPIO_Output
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=SL5
+PC1.Locked=true
+PC1.Signal=GPIO_Output
 PC10.Mode=RGB666
 PC10.Signal=LTDC_R2
+PC11.GPIOParameters=GPIO_Label
+PC11.GPIO_Label=DISP_10
+PC11.Locked=true
+PC11.Signal=GPIO_Output
+PC12.GPIOParameters=GPIO_Label
+PC12.GPIO_Label=DISP_11
+PC12.Locked=true
+PC12.Signal=GPIO_Output
 PC13.GPIOParameters=GPIO_Label
-PC13.GPIO_Label=RL5
+PC13.GPIO_Label=DISP_12
 PC13.Locked=true
 PC13.Signal=GPIO_Input
+PC14/OSC32_IN.GPIOParameters=GPIO_Label
+PC14/OSC32_IN.GPIO_Label=DISP_13
+PC14/OSC32_IN.Locked=true
+PC14/OSC32_IN.Signal=GPIO_Output
+PC15/OSC32_OUT.GPIOParameters=GPIO_Label
+PC15/OSC32_OUT.GPIO_Label=DISP_14
+PC15/OSC32_OUT.Locked=true
+PC15/OSC32_OUT.Signal=GPIO_Output
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=SL6
+PC2.Locked=true
+PC2.Signal=GPIO_Output
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=SL7
+PC3.Locked=true
+PC3.Signal=GPIO_Output
 PC6.Mode=RGB666
 PC6.Signal=LTDC_HSYNC
 PC7.Mode=RGB666
 PC7.Signal=LTDC_G6
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=DISP_8
+PC8.Locked=true
+PC8.Signal=GPIO_Output
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=DISP_9
+PC9.Locked=true
+PC9.Signal=GPIO_Output
 PD0.Signal=FMC_D2_DA2
 PD1.Signal=FMC_D3_DA3
 PD10.Signal=FMC_D15_DA15
@@ -179,11 +233,11 @@ PD7.Signal=FMC_NE1
 PD8.Signal=FMC_D13_DA13
 PD9.Signal=FMC_D14_DA14
 PE0.GPIOParameters=GPIO_Label
-PE0.GPIO_Label=SL6
+PE0.GPIO_Label=DISP_1
 PE0.Locked=true
 PE0.Signal=GPIO_Output
 PE1.GPIOParameters=GPIO_Label
-PE1.GPIO_Label=SL7
+PE1.GPIO_Label=DISP_2
 PE1.Locked=true
 PE1.Signal=GPIO_Output
 PE10.Signal=FMC_D7_DA7
@@ -193,23 +247,23 @@ PE13.Signal=FMC_D10_DA10
 PE14.Signal=FMC_D11_DA11
 PE15.Signal=FMC_D12_DA12
 PE2.GPIOParameters=GPIO_Label
-PE2.GPIO_Label=RL0
+PE2.GPIO_Label=DISP_3
 PE2.Locked=true
 PE2.Signal=GPIO_Input
 PE3.GPIOParameters=GPIO_Label
-PE3.GPIO_Label=RL1
+PE3.GPIO_Label=DISP_4
 PE3.Locked=true
 PE3.Signal=GPIO_Input
 PE4.GPIOParameters=GPIO_Label
-PE4.GPIO_Label=RL2
+PE4.GPIO_Label=DISP_5
 PE4.Locked=true
 PE4.Signal=GPIO_Input
 PE5.GPIOParameters=GPIO_Label
-PE5.GPIO_Label=RL3
+PE5.GPIO_Label=DISP_6
 PE5.Locked=true
 PE5.Signal=GPIO_Input
 PE6.GPIOParameters=GPIO_Label
-PE6.GPIO_Label=RL4
+PE6.GPIO_Label=DISP_7
 PE6.Locked=true
 PE6.Signal=GPIO_Input
 PE7.Signal=FMC_D4_DA4
@@ -227,6 +281,22 @@ PF2.Signal=FMC_A2
 PF3.Signal=FMC_A3
 PF4.Signal=FMC_A4
 PF5.Signal=FMC_A5
+PF6.GPIOParameters=GPIO_Label
+PF6.GPIO_Label=SL0
+PF6.Locked=true
+PF6.Signal=GPIO_Output
+PF7.GPIOParameters=GPIO_Label
+PF7.GPIO_Label=SL1
+PF7.Locked=true
+PF7.Signal=GPIO_Output
+PF8.GPIOParameters=GPIO_Label
+PF8.GPIO_Label=SL2
+PF8.Locked=true
+PF8.Signal=GPIO_Output
+PF9.GPIOParameters=GPIO_Label
+PF9.GPIO_Label=SL3
+PF9.Locked=true
+PF9.Signal=GPIO_Output
 PG0.Signal=FMC_A10
 PG1.Signal=FMC_A11
 PG10.Mode=RGB666
@@ -236,15 +306,15 @@ PG11.Signal=LTDC_B3
 PG12.Mode=RGB666
 PG12.Signal=LTDC_B4
 PG13.GPIOParameters=GPIO_Label
-PG13.GPIO_Label=SL0
+PG13.GPIO_Label=RL0
 PG13.Locked=true
 PG13.Signal=GPIO_Output
 PG14.GPIOParameters=GPIO_Label
-PG14.GPIO_Label=SL1
+PG14.GPIO_Label=RL1
 PG14.Locked=true
 PG14.Signal=GPIO_Output
 PG15.GPIOParameters=GPIO_Label
-PG15.GPIO_Label=SL2
+PG15.GPIO_Label=RL2
 PG15.Locked=true
 PG15.Signal=GPIO_Output
 PG2.Signal=FMC_A12
@@ -283,7 +353,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=EWARM V8.50
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FMC_Init-FMC-false-HAL-true,4-MX_LTDC_Init-LTDC-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
