--- a/doc/Распиновка/Panel429ZIT6/Panel429ZIT6.ioc
+++ b/doc/Распиновка/Panel429ZIT6/Panel429ZIT6.ioc
@@ -4,12 +4,13 @@ GPIO.groupedBy=
 KeepUserPlacement=false
 Mcu.CPN=STM32F429ZIT6
 Mcu.Family=STM32F4
-Mcu.IP0=FMC
-Mcu.IP1=LTDC
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IPNb=5
+Mcu.IP0=DAC
+Mcu.IP1=FMC
+Mcu.IP2=LTDC
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IPNb=6
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -30,82 +31,85 @@ Mcu.Pin21=PC2
 Mcu.Pin22=PC3
 Mcu.Pin23=PA3
 Mcu.Pin24=PA4
-Mcu.Pin25=PA6
-Mcu.Pin26=PB0
-Mcu.Pin27=PB1
-Mcu.Pin28=PF12
-Mcu.Pin29=PF13
+Mcu.Pin25=PA5
+Mcu.Pin26=PA6
+Mcu.Pin27=PA7
+Mcu.Pin28=PC4
+Mcu.Pin29=PB0
 Mcu.Pin3=PE5
-Mcu.Pin30=PF14
-Mcu.Pin31=PF15
-Mcu.Pin32=PG0
-Mcu.Pin33=PG1
-Mcu.Pin34=PE7
-Mcu.Pin35=PE8
-Mcu.Pin36=PE9
-Mcu.Pin37=PE10
-Mcu.Pin38=PE11
-Mcu.Pin39=PE12
+Mcu.Pin30=PB1
+Mcu.Pin31=PF12
+Mcu.Pin32=PF13
+Mcu.Pin33=PF14
+Mcu.Pin34=PF15
+Mcu.Pin35=PG0
+Mcu.Pin36=PG1
+Mcu.Pin37=PE7
+Mcu.Pin38=PE8
+Mcu.Pin39=PE9
 Mcu.Pin4=PE6
-Mcu.Pin40=PE13
-Mcu.Pin41=PE14
-Mcu.Pin42=PE15
-Mcu.Pin43=PB10
-Mcu.Pin44=PB11
-Mcu.Pin45=PD8
-Mcu.Pin46=PD9
-Mcu.Pin47=PD10
-Mcu.Pin48=PD11
-Mcu.Pin49=PD12
+Mcu.Pin40=PE10
+Mcu.Pin41=PE11
+Mcu.Pin42=PE12
+Mcu.Pin43=PE13
+Mcu.Pin44=PE14
+Mcu.Pin45=PE15
+Mcu.Pin46=PB10
+Mcu.Pin47=PB11
+Mcu.Pin48=PD8
+Mcu.Pin49=PD9
 Mcu.Pin5=PC13
-Mcu.Pin50=PD13
-Mcu.Pin51=PD14
-Mcu.Pin52=PD15
-Mcu.Pin53=PG2
-Mcu.Pin54=PG3
-Mcu.Pin55=PG4
-Mcu.Pin56=PG5
-Mcu.Pin57=PG6
-Mcu.Pin58=PG7
-Mcu.Pin59=PC6
+Mcu.Pin50=PD10
+Mcu.Pin51=PD11
+Mcu.Pin52=PD12
+Mcu.Pin53=PD13
+Mcu.Pin54=PD14
+Mcu.Pin55=PD15
+Mcu.Pin56=PG2
+Mcu.Pin57=PG3
+Mcu.Pin58=PG4
+Mcu.Pin59=PG5
 Mcu.Pin6=PC14/OSC32_IN
-Mcu.Pin60=PC7
-Mcu.Pin61=PC8
-Mcu.Pin62=PC9
-Mcu.Pin63=PA11
-Mcu.Pin64=PA12
-Mcu.Pin65=PA13
-Mcu.Pin66=PA14
-Mcu.Pin67=PA15
-Mcu.Pin68=PC10
-Mcu.Pin69=PC11
+Mcu.Pin60=PG6
+Mcu.Pin61=PG7
+Mcu.Pin62=PC6
+Mcu.Pin63=PC7
+Mcu.Pin64=PC8
+Mcu.Pin65=PC9
+Mcu.Pin66=PA11
+Mcu.Pin67=PA12
+Mcu.Pin68=PA13
+Mcu.Pin69=PA14
 Mcu.Pin7=PC15/OSC32_OUT
-Mcu.Pin70=PC12
-Mcu.Pin71=PD0
-Mcu.Pin72=PD1
-Mcu.Pin73=PD3
-Mcu.Pin74=PD4
-Mcu.Pin75=PD5
-Mcu.Pin76=PD6
-Mcu.Pin77=PD7
-Mcu.Pin78=PG10
-Mcu.Pin79=PG11
+Mcu.Pin70=PA15
+Mcu.Pin71=PC10
+Mcu.Pin72=PC11
+Mcu.Pin73=PC12
+Mcu.Pin74=PD0
+Mcu.Pin75=PD1
+Mcu.Pin76=PD3
+Mcu.Pin77=PD4
+Mcu.Pin78=PD5
+Mcu.Pin79=PD6
 Mcu.Pin8=PF0
-Mcu.Pin80=PG12
-Mcu.Pin81=PG13
-Mcu.Pin82=PG14
-Mcu.Pin83=PG15
-Mcu.Pin84=PB3
-Mcu.Pin85=PB5
-Mcu.Pin86=PB6
-Mcu.Pin87=PB7
-Mcu.Pin88=PB8
-Mcu.Pin89=PB9
+Mcu.Pin80=PD7
+Mcu.Pin81=PG10
+Mcu.Pin82=PG11
+Mcu.Pin83=PG12
+Mcu.Pin84=PG13
+Mcu.Pin85=PG14
+Mcu.Pin86=PG15
+Mcu.Pin87=PB3
+Mcu.Pin88=PB5
+Mcu.Pin89=PB6
 Mcu.Pin9=PF1
-Mcu.Pin90=PE0
-Mcu.Pin91=PE1
-Mcu.Pin92=VP_SYS_VS_Systick
-Mcu.PinsNb=93
+Mcu.Pin90=PB7
+Mcu.Pin91=PB8
+Mcu.Pin92=PB9
+Mcu.Pin93=PE0
+Mcu.Pin94=PE1
+Mcu.Pin95=VP_SYS_VS_Systick
+Mcu.PinsNb=96
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -136,8 +140,15 @@ PA3.Mode=RGB666
 PA3.Signal=LTDC_B5
 PA4.Mode=RGB666
 PA4.Signal=LTDC_VSYNC
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=LTDC_PWM
+PA5.Signal=COMP_DAC2_group
 PA6.Mode=RGB666
 PA6.Signal=LTDC_G2
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=LTDC_RL
+PA7.Locked=true
+PA7.Signal=GPIO_Output
 PB0.Mode=RGB666
 PB0.Signal=LTDC_R3
 PB1.Mode=RGB666
@@ -202,6 +213,10 @@ PC3.GPIOParameters=GPIO_Label
 PC3.GPIO_Label=SL7
 PC3.Locked=true
 PC3.Signal=GPIO_Output
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=LTDC_UD
+PC4.Locked=true
+PC4.Signal=GPIO_Output
 PC6.Mode=RGB666
 PC6.Signal=LTDC_HSYNC
 PC7.Mode=RGB666
@@ -378,6 +393,8 @@ RCC.VCOSAIOutputFreq_ValueQ=12250000
 RCC.VCOSAIOutputFreq_ValueR=24500000
 RCC.VcooutputI2S=96000000
 RCC.VcooutputI2SQ=96000000
+SH.COMP_DAC2_group.0=DAC_OUT2,DAC_OUT2
+SH.COMP_DAC2_group.ConfNb=1
 SH.FMC_A0.0=FMC_A0,19b-a1
 SH.FMC_A0.ConfNb=1
 SH.FMC_A1.0=FMC_A1,19b-a1
