--- a/doc/Распиновка/Panel429ZIT6/Panel429ZIT6.ioc
+++ b/doc/Распиновка/Panel429ZIT6/Panel429ZIT6.ioc
@@ -186,23 +186,22 @@ PC1.Signal=GPIO_Output
 PC10.Mode=RGB666
 PC10.Signal=LTDC_R2
 PC11.GPIOParameters=GPIO_Label
-PC11.GPIO_Label=DISP_10
-PC11.Locked=true
+PC11.GPIO_Label=DISP_10_AD0
 PC11.Signal=GPIO_Output
 PC12.GPIOParameters=GPIO_Label
-PC12.GPIO_Label=DISP_11
+PC12.GPIO_Label=DISP_11_AD1
 PC12.Locked=true
 PC12.Signal=GPIO_Output
 PC13.GPIOParameters=GPIO_Label
-PC13.GPIO_Label=DISP_12
+PC13.GPIO_Label=DISP_12_SEL_0
 PC13.Locked=true
 PC13.Signal=GPIO_Input
 PC14/OSC32_IN.GPIOParameters=GPIO_Label
-PC14/OSC32_IN.GPIO_Label=DISP_13
+PC14/OSC32_IN.GPIO_Label=DISP_13_CS0
 PC14/OSC32_IN.Locked=true
 PC14/OSC32_IN.Signal=GPIO_Output
 PC15/OSC32_OUT.GPIOParameters=GPIO_Label
-PC15/OSC32_OUT.GPIO_Label=DISP_14
+PC15/OSC32_OUT.GPIO_Label=DISP_14_CS1
 PC15/OSC32_OUT.Locked=true
 PC15/OSC32_OUT.Signal=GPIO_Output
 PC2.GPIOParameters=GPIO_Label
@@ -222,11 +221,11 @@ PC6.Signal=LTDC_HSYNC
 PC7.Mode=RGB666
 PC7.Signal=LTDC_G6
 PC8.GPIOParameters=GPIO_Label
-PC8.GPIO_Label=DISP_8
+PC8.GPIO_Label=DISP_8_WR
 PC8.Locked=true
 PC8.Signal=GPIO_Output
 PC9.GPIOParameters=GPIO_Label
-PC9.GPIO_Label=DISP_9
+PC9.GPIO_Label=DISP_9_RD
 PC9.Locked=true
 PC9.Signal=GPIO_Output
 PD0.Signal=FMC_D2_DA2
@@ -248,11 +247,11 @@ PD7.Signal=FMC_NE1
 PD8.Signal=FMC_D13_DA13
 PD9.Signal=FMC_D14_DA14
 PE0.GPIOParameters=GPIO_Label
-PE0.GPIO_Label=DISP_1
+PE0.GPIO_Label=DISP_1_AD2
 PE0.Locked=true
 PE0.Signal=GPIO_Output
 PE1.GPIOParameters=GPIO_Label
-PE1.GPIO_Label=DISP_2
+PE1.GPIO_Label=DISP_2_AD3
 PE1.Locked=true
 PE1.Signal=GPIO_Output
 PE10.Signal=FMC_D7_DA7
@@ -262,23 +261,23 @@ PE13.Signal=FMC_D10_DA10
 PE14.Signal=FMC_D11_DA11
 PE15.Signal=FMC_D12_DA12
 PE2.GPIOParameters=GPIO_Label
-PE2.GPIO_Label=DISP_3
+PE2.GPIO_Label=DISP_3_AD4
 PE2.Locked=true
 PE2.Signal=GPIO_Input
 PE3.GPIOParameters=GPIO_Label
-PE3.GPIO_Label=DISP_4
+PE3.GPIO_Label=DISP_4 AD5
 PE3.Locked=true
 PE3.Signal=GPIO_Input
 PE4.GPIOParameters=GPIO_Label
-PE4.GPIO_Label=DISP_5
+PE4.GPIO_Label=DISP_5 AD6
 PE4.Locked=true
 PE4.Signal=GPIO_Input
 PE5.GPIOParameters=GPIO_Label
-PE5.GPIO_Label=DISP_6
+PE5.GPIO_Label=DISP_6 AD7
 PE5.Locked=true
 PE5.Signal=GPIO_Input
 PE6.GPIOParameters=GPIO_Label
-PE6.GPIO_Label=DISP_7
+PE6.GPIO_Label=DISP_7 FL_DISP
 PE6.Locked=true
 PE6.Signal=GPIO_Input
 PE7.Signal=FMC_D4_DA4
@@ -368,7 +367,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=EWARM V8.50
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FMC_Init-FMC-false-HAL-true,4-MX_LTDC_Init-LTDC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FMC_Init-FMC-false-HAL-true,4-MX_LTDC_Init-LTDC-false-HAL-true,5-MX_DAC_Init-DAC-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
