--- a/doc/Распиновка/Panel429IIT6/Panel429IIT6.ioc
+++ b/doc/Распиновка/Panel429IIT6/Panel429IIT6.ioc
@@ -4,14 +4,52 @@ GPIO.groupedBy=
 KeepUserPlacement=false
 Mcu.CPN=STM32F429IIT6
 Mcu.Family=STM32F4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IPNb=3
+Mcu.IP0=FMC
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IPNb=4
 Mcu.Name=STM32F429IITx
 Mcu.Package=LQFP176
-Mcu.Pin0=VP_SYS_VS_Systick
-Mcu.PinsNb=1
+Mcu.Pin0=PF0
+Mcu.Pin1=PF1
+Mcu.Pin10=PG0
+Mcu.Pin11=PG1
+Mcu.Pin12=PE7
+Mcu.Pin13=PE8
+Mcu.Pin14=PE9
+Mcu.Pin15=PE10
+Mcu.Pin16=PE11
+Mcu.Pin17=PE12
+Mcu.Pin18=PE13
+Mcu.Pin19=PE14
+Mcu.Pin2=PF2
+Mcu.Pin20=PE15
+Mcu.Pin21=PD8
+Mcu.Pin22=PD9
+Mcu.Pin23=PD10
+Mcu.Pin24=PD11
+Mcu.Pin25=PD12
+Mcu.Pin26=PD14
+Mcu.Pin27=PD15
+Mcu.Pin28=PG2
+Mcu.Pin29=PG3
+Mcu.Pin3=PF3
+Mcu.Pin30=PG4
+Mcu.Pin31=PG5
+Mcu.Pin32=PD0
+Mcu.Pin33=PD1
+Mcu.Pin34=PD4
+Mcu.Pin35=PD5
+Mcu.Pin36=PD7
+Mcu.Pin37=VP_SYS_VS_Systick
+Mcu.Pin4=PF4
+Mcu.Pin5=PF5
+Mcu.Pin6=PF12
+Mcu.Pin7=PF13
+Mcu.Pin8=PF14
+Mcu.Pin9=PF15
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429IITx
@@ -28,6 +66,44 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PD0.Signal=FMC_D2_DA2
+PD1.Signal=FMC_D3_DA3
+PD10.Signal=FMC_D15_DA15
+PD11.Signal=FMC_A16_CLE
+PD12.Signal=FMC_A17_ALE
+PD14.Signal=FMC_D0_DA0
+PD15.Signal=FMC_D1_DA1
+PD4.Signal=FMC_NOE
+PD5.Signal=FMC_NWE
+PD7.Mode=NorPsramChipSelect1_1
+PD7.Signal=FMC_NE1
+PD8.Signal=FMC_D13_DA13
+PD9.Signal=FMC_D14_DA14
+PE10.Signal=FMC_D7_DA7
+PE11.Signal=FMC_D8_DA8
+PE12.Signal=FMC_D9_DA9
+PE13.Signal=FMC_D10_DA10
+PE14.Signal=FMC_D11_DA11
+PE15.Signal=FMC_D12_DA12
+PE7.Signal=FMC_D4_DA4
+PE8.Signal=FMC_D5_DA5
+PE9.Signal=FMC_D6_DA6
+PF0.Signal=FMC_A0
+PF1.Signal=FMC_A1
+PF12.Signal=FMC_A6
+PF13.Signal=FMC_A7
+PF14.Signal=FMC_A8
+PF15.Signal=FMC_A9
+PF2.Signal=FMC_A2
+PF3.Signal=FMC_A3
+PF4.Signal=FMC_A4
+PF5.Signal=FMC_A5
+PG0.Signal=FMC_A10
+PG1.Signal=FMC_A11
+PG2.Signal=FMC_A12
+PG3.Signal=FMC_A13
+PG4.Signal=FMC_A14_BA0
+PG5.Signal=FMC_A15_BA1
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -81,6 +157,78 @@ RCC.VCOSAIOutputFreq_ValueQ=12250000
 RCC.VCOSAIOutputFreq_ValueR=24500000
 RCC.VcooutputI2S=96000000
 RCC.VcooutputI2SQ=96000000
+SH.FMC_A0.0=FMC_A0,18b-a1
+SH.FMC_A0.ConfNb=1
+SH.FMC_A1.0=FMC_A1,18b-a1
+SH.FMC_A1.ConfNb=1
+SH.FMC_A10.0=FMC_A10,18b-a1
+SH.FMC_A10.ConfNb=1
+SH.FMC_A11.0=FMC_A11,18b-a1
+SH.FMC_A11.ConfNb=1
+SH.FMC_A12.0=FMC_A12,18b-a1
+SH.FMC_A12.ConfNb=1
+SH.FMC_A13.0=FMC_A13,18b-a1
+SH.FMC_A13.ConfNb=1
+SH.FMC_A14_BA0.0=FMC_A14,18b-a1
+SH.FMC_A14_BA0.ConfNb=1
+SH.FMC_A15_BA1.0=FMC_A15,18b-a1
+SH.FMC_A15_BA1.ConfNb=1
+SH.FMC_A16_CLE.0=FMC_A16,18b-a1
+SH.FMC_A16_CLE.ConfNb=1
+SH.FMC_A17_ALE.0=FMC_A17,18b-a1
+SH.FMC_A17_ALE.ConfNb=1
+SH.FMC_A2.0=FMC_A2,18b-a1
+SH.FMC_A2.ConfNb=1
+SH.FMC_A3.0=FMC_A3,18b-a1
+SH.FMC_A3.ConfNb=1
+SH.FMC_A4.0=FMC_A4,18b-a1
+SH.FMC_A4.ConfNb=1
+SH.FMC_A5.0=FMC_A5,18b-a1
+SH.FMC_A5.ConfNb=1
+SH.FMC_A6.0=FMC_A6,18b-a1
+SH.FMC_A6.ConfNb=1
+SH.FMC_A7.0=FMC_A7,18b-a1
+SH.FMC_A7.ConfNb=1
+SH.FMC_A8.0=FMC_A8,18b-a1
+SH.FMC_A8.ConfNb=1
+SH.FMC_A9.0=FMC_A9,18b-a1
+SH.FMC_A9.ConfNb=1
+SH.FMC_D0_DA0.0=FMC_D0,16b-d1
+SH.FMC_D0_DA0.ConfNb=1
+SH.FMC_D10_DA10.0=FMC_D10,16b-d1
+SH.FMC_D10_DA10.ConfNb=1
+SH.FMC_D11_DA11.0=FMC_D11,16b-d1
+SH.FMC_D11_DA11.ConfNb=1
+SH.FMC_D12_DA12.0=FMC_D12,16b-d1
+SH.FMC_D12_DA12.ConfNb=1
+SH.FMC_D13_DA13.0=FMC_D13,16b-d1
+SH.FMC_D13_DA13.ConfNb=1
+SH.FMC_D14_DA14.0=FMC_D14,16b-d1
+SH.FMC_D14_DA14.ConfNb=1
+SH.FMC_D15_DA15.0=FMC_D15,16b-d1
+SH.FMC_D15_DA15.ConfNb=1
+SH.FMC_D1_DA1.0=FMC_D1,16b-d1
+SH.FMC_D1_DA1.ConfNb=1
+SH.FMC_D2_DA2.0=FMC_D2,16b-d1
+SH.FMC_D2_DA2.ConfNb=1
+SH.FMC_D3_DA3.0=FMC_D3,16b-d1
+SH.FMC_D3_DA3.ConfNb=1
+SH.FMC_D4_DA4.0=FMC_D4,16b-d1
+SH.FMC_D4_DA4.ConfNb=1
+SH.FMC_D5_DA5.0=FMC_D5,16b-d1
+SH.FMC_D5_DA5.ConfNb=1
+SH.FMC_D6_DA6.0=FMC_D6,16b-d1
+SH.FMC_D6_DA6.ConfNb=1
+SH.FMC_D7_DA7.0=FMC_D7,16b-d1
+SH.FMC_D7_DA7.ConfNb=1
+SH.FMC_D8_DA8.0=FMC_D8,16b-d1
+SH.FMC_D8_DA8.ConfNb=1
+SH.FMC_D9_DA9.0=FMC_D9,16b-d1
+SH.FMC_D9_DA9.ConfNb=1
+SH.FMC_NOE.0=FMC_NOE,NorFlash1
+SH.FMC_NOE.ConfNb=1
+SH.FMC_NWE.0=FMC_NWE,NorFlash1
+SH.FMC_NWE.ConfNb=1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
