--- a/doc/Распиновка/Panel429IIT6/Panel429IIT6.ioc
+++ b/doc/Распиновка/Panel429IIT6/Panel429IIT6.ioc
@@ -5,51 +5,74 @@ KeepUserPlacement=false
 Mcu.CPN=STM32F429IIT6
 Mcu.Family=STM32F4
 Mcu.IP0=FMC
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IPNb=4
+Mcu.IP1=LTDC
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IPNb=5
 Mcu.Name=STM32F429IITx
 Mcu.Package=LQFP176
-Mcu.Pin0=PF0
-Mcu.Pin1=PF1
-Mcu.Pin10=PG0
-Mcu.Pin11=PG1
-Mcu.Pin12=PE7
-Mcu.Pin13=PE8
-Mcu.Pin14=PE9
-Mcu.Pin15=PE10
-Mcu.Pin16=PE11
-Mcu.Pin17=PE12
-Mcu.Pin18=PE13
-Mcu.Pin19=PE14
-Mcu.Pin2=PF2
-Mcu.Pin20=PE15
-Mcu.Pin21=PD8
-Mcu.Pin22=PD9
-Mcu.Pin23=PD10
-Mcu.Pin24=PD11
-Mcu.Pin25=PD12
-Mcu.Pin26=PD14
-Mcu.Pin27=PD15
-Mcu.Pin28=PG2
-Mcu.Pin29=PG3
-Mcu.Pin3=PF3
-Mcu.Pin30=PG4
-Mcu.Pin31=PG5
-Mcu.Pin32=PD0
-Mcu.Pin33=PD1
-Mcu.Pin34=PD4
-Mcu.Pin35=PD5
-Mcu.Pin36=PD7
-Mcu.Pin37=VP_SYS_VS_Systick
-Mcu.Pin4=PF4
-Mcu.Pin5=PF5
-Mcu.Pin6=PF12
-Mcu.Pin7=PF13
-Mcu.Pin8=PF14
-Mcu.Pin9=PF15
-Mcu.PinsNb=38
+Mcu.Pin0=PI9
+Mcu.Pin1=PI10
+Mcu.Pin10=PA6
+Mcu.Pin11=PB0
+Mcu.Pin12=PB1
+Mcu.Pin13=PF12
+Mcu.Pin14=PF13
+Mcu.Pin15=PF14
+Mcu.Pin16=PF15
+Mcu.Pin17=PG0
+Mcu.Pin18=PG1
+Mcu.Pin19=PE7
+Mcu.Pin2=PF0
+Mcu.Pin20=PE8
+Mcu.Pin21=PE9
+Mcu.Pin22=PE10
+Mcu.Pin23=PE11
+Mcu.Pin24=PE12
+Mcu.Pin25=PE13
+Mcu.Pin26=PE14
+Mcu.Pin27=PE15
+Mcu.Pin28=PB10
+Mcu.Pin29=PB11
+Mcu.Pin3=PF1
+Mcu.Pin30=PH8
+Mcu.Pin31=PH10
+Mcu.Pin32=PH11
+Mcu.Pin33=PD8
+Mcu.Pin34=PD9
+Mcu.Pin35=PD10
+Mcu.Pin36=PD11
+Mcu.Pin37=PD12
+Mcu.Pin38=PD14
+Mcu.Pin39=PD15
+Mcu.Pin4=PF2
+Mcu.Pin40=PG2
+Mcu.Pin41=PG3
+Mcu.Pin42=PG4
+Mcu.Pin43=PG5
+Mcu.Pin44=PG6
+Mcu.Pin45=PG7
+Mcu.Pin46=PC7
+Mcu.Pin47=PH14
+Mcu.Pin48=PI2
+Mcu.Pin49=PD0
+Mcu.Pin5=PF3
+Mcu.Pin50=PD1
+Mcu.Pin51=PD4
+Mcu.Pin52=PD5
+Mcu.Pin53=PD6
+Mcu.Pin54=PD7
+Mcu.Pin55=PG11
+Mcu.Pin56=PG12
+Mcu.Pin57=PB8
+Mcu.Pin58=PB9
+Mcu.Pin59=VP_SYS_VS_Systick
+Mcu.Pin6=PF4
+Mcu.Pin7=PF5
+Mcu.Pin8=PF10
+Mcu.Pin9=PA3
+Mcu.PinsNb=60
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429IITx
@@ -66,6 +89,24 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA3.Mode=RGB666
+PA3.Signal=LTDC_B5
+PA6.Mode=RGB666
+PA6.Signal=LTDC_G2
+PB0.Mode=RGB666
+PB0.Signal=LTDC_R3
+PB1.Mode=RGB666
+PB1.Signal=LTDC_R6
+PB10.Mode=RGB666
+PB10.Signal=LTDC_G4
+PB11.Mode=RGB666
+PB11.Signal=LTDC_G5
+PB8.Mode=RGB666
+PB8.Signal=LTDC_B6
+PB9.Mode=RGB666
+PB9.Signal=LTDC_B7
+PC7.Mode=RGB666
+PC7.Signal=LTDC_G6
 PD0.Signal=FMC_D2_DA2
 PD1.Signal=FMC_D3_DA3
 PD10.Signal=FMC_D15_DA15
@@ -75,6 +116,8 @@ PD14.Signal=FMC_D0_DA0
 PD15.Signal=FMC_D1_DA1
 PD4.Signal=FMC_NOE
 PD5.Signal=FMC_NWE
+PD6.Mode=RGB666
+PD6.Signal=LTDC_B2
 PD7.Mode=NorPsramChipSelect1_1
 PD7.Signal=FMC_NE1
 PD8.Signal=FMC_D13_DA13
@@ -90,6 +133,8 @@ PE8.Signal=FMC_D5_DA5
 PE9.Signal=FMC_D6_DA6
 PF0.Signal=FMC_A0
 PF1.Signal=FMC_A1
+PF10.Mode=RGB666
+PF10.Signal=LTDC_DE
 PF12.Signal=FMC_A6
 PF13.Signal=FMC_A7
 PF14.Signal=FMC_A8
@@ -100,10 +145,32 @@ PF4.Signal=FMC_A4
 PF5.Signal=FMC_A5
 PG0.Signal=FMC_A10
 PG1.Signal=FMC_A11
+PG11.Mode=RGB666
+PG11.Signal=LTDC_B3
+PG12.Mode=RGB666
+PG12.Signal=LTDC_B4
 PG2.Signal=FMC_A12
 PG3.Signal=FMC_A13
 PG4.Signal=FMC_A14_BA0
 PG5.Signal=FMC_A15_BA1
+PG6.Mode=RGB666
+PG6.Signal=LTDC_R7
+PG7.Mode=RGB666
+PG7.Signal=LTDC_CLK
+PH10.Mode=RGB666
+PH10.Signal=LTDC_R4
+PH11.Mode=RGB666
+PH11.Signal=LTDC_R5
+PH14.Mode=RGB666
+PH14.Signal=LTDC_G3
+PH8.Mode=RGB666
+PH8.Signal=LTDC_R2
+PI10.Mode=RGB666
+PI10.Signal=LTDC_HSYNC
+PI2.Mode=RGB666
+PI2.Signal=LTDC_G7
+PI9.Mode=RGB666
+PI9.Signal=LTDC_VSYNC
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -132,7 +199,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=EWARM V8.50
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FMC_Init-FMC-false-HAL-true,4-MX_LTDC_Init-LTDC-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
