--- a/doc/Распиновка/Panel429IIT6/Panel429IIT6.ioc
+++ b/doc/Распиновка/Panel429IIT6/Panel429IIT6.ioc
@@ -4,75 +4,107 @@ GPIO.groupedBy=
 KeepUserPlacement=false
 Mcu.CPN=STM32F429IIT6
 Mcu.Family=STM32F4
-Mcu.IP0=FMC
-Mcu.IP1=LTDC
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IPNb=5
+Mcu.IP0=DAC
+Mcu.IP1=FMC
+Mcu.IP2=LTDC
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IPNb=6
 Mcu.Name=STM32F429IITx
 Mcu.Package=LQFP176
-Mcu.Pin0=PI9
-Mcu.Pin1=PI10
-Mcu.Pin10=PA6
-Mcu.Pin11=PB0
-Mcu.Pin12=PB1
-Mcu.Pin13=PF12
-Mcu.Pin14=PF13
-Mcu.Pin15=PF14
-Mcu.Pin16=PF15
-Mcu.Pin17=PG0
-Mcu.Pin18=PG1
-Mcu.Pin19=PE7
-Mcu.Pin2=PF0
-Mcu.Pin20=PE8
-Mcu.Pin21=PE9
-Mcu.Pin22=PE10
-Mcu.Pin23=PE11
-Mcu.Pin24=PE12
-Mcu.Pin25=PE13
-Mcu.Pin26=PE14
-Mcu.Pin27=PE15
-Mcu.Pin28=PB10
-Mcu.Pin29=PB11
-Mcu.Pin3=PF1
-Mcu.Pin30=PH8
-Mcu.Pin31=PH10
-Mcu.Pin32=PH11
-Mcu.Pin33=PD8
-Mcu.Pin34=PD9
-Mcu.Pin35=PD10
-Mcu.Pin36=PD11
-Mcu.Pin37=PD12
-Mcu.Pin38=PD14
-Mcu.Pin39=PD15
-Mcu.Pin4=PF2
-Mcu.Pin40=PG2
-Mcu.Pin41=PG3
-Mcu.Pin42=PG4
-Mcu.Pin43=PG5
-Mcu.Pin44=PG6
-Mcu.Pin45=PG7
-Mcu.Pin46=PC7
-Mcu.Pin47=PH14
-Mcu.Pin48=PI2
-Mcu.Pin49=PD0
-Mcu.Pin5=PF3
-Mcu.Pin50=PD1
-Mcu.Pin51=PD4
-Mcu.Pin52=PD5
-Mcu.Pin53=PD6
-Mcu.Pin54=PD7
-Mcu.Pin55=PG11
-Mcu.Pin56=PG12
-Mcu.Pin57=PB8
-Mcu.Pin58=PB9
-Mcu.Pin59=VP_SYS_VS_Systick
-Mcu.Pin6=PF4
-Mcu.Pin7=PF5
-Mcu.Pin8=PF10
-Mcu.Pin9=PA3
-Mcu.PinsNb=60
+Mcu.Pin0=PE2
+Mcu.Pin1=PE3
+Mcu.Pin10=PI10
+Mcu.Pin11=PF0
+Mcu.Pin12=PF1
+Mcu.Pin13=PF2
+Mcu.Pin14=PF3
+Mcu.Pin15=PF4
+Mcu.Pin16=PF5
+Mcu.Pin17=PF10
+Mcu.Pin18=PA3
+Mcu.Pin19=PA4
+Mcu.Pin2=PE4
+Mcu.Pin20=PA6
+Mcu.Pin21=PB0
+Mcu.Pin22=PB1
+Mcu.Pin23=PF12
+Mcu.Pin24=PF13
+Mcu.Pin25=PF14
+Mcu.Pin26=PF15
+Mcu.Pin27=PG0
+Mcu.Pin28=PG1
+Mcu.Pin29=PE7
+Mcu.Pin3=PE5
+Mcu.Pin30=PE8
+Mcu.Pin31=PE9
+Mcu.Pin32=PE10
+Mcu.Pin33=PE11
+Mcu.Pin34=PE12
+Mcu.Pin35=PE13
+Mcu.Pin36=PE14
+Mcu.Pin37=PE15
+Mcu.Pin38=PB10
+Mcu.Pin39=PB11
+Mcu.Pin4=PE6
+Mcu.Pin40=PH8
+Mcu.Pin41=PH10
+Mcu.Pin42=PH11
+Mcu.Pin43=PD8
+Mcu.Pin44=PD9
+Mcu.Pin45=PD10
+Mcu.Pin46=PD11
+Mcu.Pin47=PD12
+Mcu.Pin48=PD14
+Mcu.Pin49=PD15
+Mcu.Pin5=PI8
+Mcu.Pin50=PG2
+Mcu.Pin51=PG3
+Mcu.Pin52=PG4
+Mcu.Pin53=PG5
+Mcu.Pin54=PG6
+Mcu.Pin55=PG7
+Mcu.Pin56=PC7
+Mcu.Pin57=PC8
+Mcu.Pin58=PC9
+Mcu.Pin59=PA8
+Mcu.Pin6=PC13
+Mcu.Pin60=PA9
+Mcu.Pin61=PA10
+Mcu.Pin62=PA11
+Mcu.Pin63=PA12
+Mcu.Pin64=PA13
+Mcu.Pin65=PH14
+Mcu.Pin66=PI2
+Mcu.Pin67=PA14
+Mcu.Pin68=PA15
+Mcu.Pin69=PC10
+Mcu.Pin7=PC14/OSC32_IN
+Mcu.Pin70=PC11
+Mcu.Pin71=PC12
+Mcu.Pin72=PD0
+Mcu.Pin73=PD1
+Mcu.Pin74=PD4
+Mcu.Pin75=PD5
+Mcu.Pin76=PD6
+Mcu.Pin77=PD7
+Mcu.Pin78=PG11
+Mcu.Pin79=PG12
+Mcu.Pin8=PC15/OSC32_OUT
+Mcu.Pin80=PB6
+Mcu.Pin81=PB7
+Mcu.Pin82=PB8
+Mcu.Pin83=PB9
+Mcu.Pin84=PE0
+Mcu.Pin85=PE1
+Mcu.Pin86=PI4
+Mcu.Pin87=PI5
+Mcu.Pin88=PI6
+Mcu.Pin89=PI7
+Mcu.Pin9=PI9
+Mcu.Pin90=VP_SYS_VS_Systick
+Mcu.PinsNb=91
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429IITx
@@ -89,10 +121,43 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=DISP_AD2
+PA10.Locked=true
+PA10.Signal=GPIO_Input
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=DISP_AD3
+PA11.Locked=true
+PA11.Signal=GPIO_Input
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=DISP_AD4
+PA12.Locked=true
+PA12.Signal=GPIO_Input
+PA13.GPIOParameters=GPIO_Label
+PA13.GPIO_Label=DISP_AD5
+PA13.Locked=true
+PA13.Signal=GPIO_Input
+PA14.GPIOParameters=GPIO_Label
+PA14.GPIO_Label=DISP_AD6
+PA14.Locked=true
+PA14.Signal=GPIO_Input
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=DISP_AD7
+PA15.Locked=true
+PA15.Signal=GPIO_Input
 PA3.Mode=RGB666
 PA3.Signal=LTDC_B5
+PA4.Signal=COMP_DAC1_group
 PA6.Mode=RGB666
 PA6.Signal=LTDC_G2
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=DISP_AD0
+PA8.Locked=true
+PA8.Signal=GPIO_Input
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=DISP_AD1
+PA9.Locked=true
+PA9.Signal=GPIO_Input
 PB0.Mode=RGB666
 PB0.Signal=LTDC_R3
 PB1.Mode=RGB666
@@ -101,12 +166,52 @@ PB10.Mode=RGB666
 PB10.Signal=LTDC_G4
 PB11.Mode=RGB666
 PB11.Signal=LTDC_G5
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=RL5
+PB6.Locked=true
+PB6.Signal=GPIO_Input
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=RL4
+PB7.Locked=true
+PB7.Signal=GPIO_Input
 PB8.Mode=RGB666
 PB8.Signal=LTDC_B6
 PB9.Mode=RGB666
 PB9.Signal=LTDC_B7
+PC10.GPIOParameters=GPIO_Label
+PC10.GPIO_Label=CS0
+PC10.Locked=true
+PC10.Signal=GPIO_Input
+PC11.GPIOParameters=GPIO_Label
+PC11.GPIO_Label=CS1
+PC11.Locked=true
+PC11.Signal=GPIO_Input
+PC12.GPIOParameters=GPIO_Label
+PC12.GPIO_Label=WR_DISP
+PC12.Locked=true
+PC12.Signal=GPIO_Input
+PC13.GPIOParameters=GPIO_Label
+PC13.GPIO_Label=RD_DISP
+PC13.Locked=true
+PC13.Signal=GPIO_Input
+PC14/OSC32_IN.GPIOParameters=GPIO_Label
+PC14/OSC32_IN.GPIO_Label=SEL_1
+PC14/OSC32_IN.Locked=true
+PC14/OSC32_IN.Signal=GPIO_Input
+PC15/OSC32_OUT.GPIOParameters=GPIO_Label
+PC15/OSC32_OUT.GPIO_Label=SEL_2
+PC15/OSC32_OUT.Locked=true
+PC15/OSC32_OUT.Signal=GPIO_Input
 PC7.Mode=RGB666
 PC7.Signal=LTDC_G6
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=FL_DISP
+PC8.Locked=true
+PC8.Signal=GPIO_Input
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=SEL_0
+PC9.Locked=true
+PC9.Signal=GPIO_Input
 PD0.Signal=FMC_D2_DA2
 PD1.Signal=FMC_D3_DA3
 PD10.Signal=FMC_D15_DA15
@@ -122,12 +227,40 @@ PD7.Mode=NorPsramChipSelect1_1
 PD7.Signal=FMC_NE1
 PD8.Signal=FMC_D13_DA13
 PD9.Signal=FMC_D14_DA14
+PE0.GPIOParameters=GPIO_Label
+PE0.GPIO_Label=RL3
+PE0.Locked=true
+PE0.Signal=GPIO_Input
+PE1.GPIOParameters=GPIO_Label
+PE1.GPIO_Label=RL2
+PE1.Locked=true
+PE1.Signal=GPIO_Input
 PE10.Signal=FMC_D7_DA7
 PE11.Signal=FMC_D8_DA8
 PE12.Signal=FMC_D9_DA9
 PE13.Signal=FMC_D10_DA10
 PE14.Signal=FMC_D11_DA11
 PE15.Signal=FMC_D12_DA12
+PE2.GPIOParameters=GPIO_Label
+PE2.GPIO_Label=SL5
+PE2.Locked=true
+PE2.Signal=GPIO_Output
+PE3.GPIOParameters=GPIO_Label
+PE3.GPIO_Label=SL4
+PE3.Locked=true
+PE3.Signal=GPIO_Output
+PE4.GPIOParameters=GPIO_Label
+PE4.GPIO_Label=SL3
+PE4.Locked=true
+PE4.Signal=GPIO_Output
+PE5.GPIOParameters=GPIO_Label
+PE5.GPIO_Label=SL2
+PE5.Locked=true
+PE5.Signal=GPIO_Output
+PE6.GPIOParameters=GPIO_Label
+PE6.GPIO_Label=SL1
+PE6.Locked=true
+PE6.Signal=GPIO_Output
 PE7.Signal=FMC_D4_DA4
 PE8.Signal=FMC_D5_DA5
 PE9.Signal=FMC_D6_DA6
@@ -169,6 +302,26 @@ PI10.Mode=RGB666
 PI10.Signal=LTDC_HSYNC
 PI2.Mode=RGB666
 PI2.Signal=LTDC_G7
+PI4.GPIOParameters=GPIO_Label
+PI4.GPIO_Label=RL1
+PI4.Locked=true
+PI4.Signal=GPIO_Input
+PI5.GPIOParameters=GPIO_Label
+PI5.GPIO_Label=RL0
+PI5.Locked=true
+PI5.Signal=GPIO_Input
+PI6.GPIOParameters=GPIO_Label
+PI6.GPIO_Label=SL7
+PI6.Locked=true
+PI6.Signal=GPIO_Output
+PI7.GPIOParameters=GPIO_Label
+PI7.GPIO_Label=SL6
+PI7.Locked=true
+PI7.Signal=GPIO_Output
+PI8.GPIOParameters=GPIO_Label
+PI8.GPIO_Label=SL0
+PI8.Locked=true
+PI8.Signal=GPIO_Output
 PI9.Mode=RGB666
 PI9.Signal=LTDC_VSYNC
 PinOutPanel.RotationAngle=0
@@ -224,6 +377,8 @@ RCC.VCOSAIOutputFreq_ValueQ=12250000
 RCC.VCOSAIOutputFreq_ValueR=24500000
 RCC.VcooutputI2S=96000000
 RCC.VcooutputI2SQ=96000000
+SH.COMP_DAC1_group.0=DAC_OUT1,DAC_OUT1
+SH.COMP_DAC1_group.ConfNb=1
 SH.FMC_A0.0=FMC_A0,18b-a1
 SH.FMC_A0.ConfNb=1
 SH.FMC_A1.0=FMC_A1,18b-a1
