--- a/doc/Распиновка/Panel429IIT6/Panel429IIT6.ioc
+++ b/doc/Распиновка/Panel429IIT6/Panel429IIT6.ioc
@@ -89,22 +89,24 @@ Mcu.Pin74=PD4
 Mcu.Pin75=PD5
 Mcu.Pin76=PD6
 Mcu.Pin77=PD7
-Mcu.Pin78=PG11
-Mcu.Pin79=PG12
+Mcu.Pin78=PG10
+Mcu.Pin79=PG11
 Mcu.Pin8=PC15/OSC32_OUT
-Mcu.Pin80=PB6
-Mcu.Pin81=PB7
-Mcu.Pin82=PB8
-Mcu.Pin83=PB9
-Mcu.Pin84=PE0
-Mcu.Pin85=PE1
-Mcu.Pin86=PI4
-Mcu.Pin87=PI5
-Mcu.Pin88=PI6
-Mcu.Pin89=PI7
+Mcu.Pin80=PG12
+Mcu.Pin81=PG13
+Mcu.Pin82=PB6
+Mcu.Pin83=PB7
+Mcu.Pin84=PB8
+Mcu.Pin85=PB9
+Mcu.Pin86=PE0
+Mcu.Pin87=PE1
+Mcu.Pin88=PI4
+Mcu.Pin89=PI5
 Mcu.Pin9=PI9
-Mcu.Pin90=VP_SYS_VS_Systick
-Mcu.PinsNb=91
+Mcu.Pin90=PI6
+Mcu.Pin91=PI7
+Mcu.Pin92=VP_SYS_VS_Systick
+Mcu.PinsNb=93
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429IITx
@@ -278,10 +280,18 @@ PF4.Signal=FMC_A4
 PF5.Signal=FMC_A5
 PG0.Signal=FMC_A10
 PG1.Signal=FMC_A11
+PG10.GPIOParameters=GPIO_Label
+PG10.GPIO_Label=U/D
+PG10.Locked=true
+PG10.Signal=GPIO_Output
 PG11.Mode=RGB666
 PG11.Signal=LTDC_B3
 PG12.Mode=RGB666
 PG12.Signal=LTDC_B4
+PG13.GPIOParameters=GPIO_Label
+PG13.GPIO_Label=R/L
+PG13.Locked=true
+PG13.Signal=GPIO_Output
 PG2.Signal=FMC_A12
 PG3.Signal=FMC_A13
 PG4.Signal=FMC_A14_BA0
@@ -352,7 +362,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=EWARM V8.50
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FMC_Init-FMC-false-HAL-true,4-MX_LTDC_Init-LTDC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FMC_Init-FMC-false-HAL-true,4-MX_LTDC_Init-LTDC-false-HAL-true,5-MX_DAC_Init-DAC-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
