исправлена нумерация выводов

--- a/doc/Распиновка/Panel429IIT6/Panel429IIT6.ioc
+++ b/doc/Распиновка/Panel429IIT6/Panel429IIT6.ioc
@@ -23,90 +23,93 @@ Mcu.Pin14=PF3
 Mcu.Pin15=PF4
 Mcu.Pin16=PF5
 Mcu.Pin17=PF10
-Mcu.Pin18=PA3
-Mcu.Pin19=PA4
+Mcu.Pin18=PC0
+Mcu.Pin19=PC1
 Mcu.Pin2=PE4
-Mcu.Pin20=PA6
-Mcu.Pin21=PB0
-Mcu.Pin22=PB1
-Mcu.Pin23=PF12
-Mcu.Pin24=PF13
-Mcu.Pin25=PF14
-Mcu.Pin26=PF15
-Mcu.Pin27=PG0
-Mcu.Pin28=PG1
-Mcu.Pin29=PE7
+Mcu.Pin20=PC2
+Mcu.Pin21=PC3
+Mcu.Pin22=PA3
+Mcu.Pin23=PA4
+Mcu.Pin24=PA6
+Mcu.Pin25=PC4
+Mcu.Pin26=PC5
+Mcu.Pin27=PB0
+Mcu.Pin28=PB1
+Mcu.Pin29=PF12
 Mcu.Pin3=PE5
-Mcu.Pin30=PE8
-Mcu.Pin31=PE9
-Mcu.Pin32=PE10
-Mcu.Pin33=PE11
-Mcu.Pin34=PE12
-Mcu.Pin35=PE13
-Mcu.Pin36=PE14
-Mcu.Pin37=PE15
-Mcu.Pin38=PB10
-Mcu.Pin39=PB11
+Mcu.Pin30=PF13
+Mcu.Pin31=PF14
+Mcu.Pin32=PF15
+Mcu.Pin33=PG0
+Mcu.Pin34=PG1
+Mcu.Pin35=PE7
+Mcu.Pin36=PE8
+Mcu.Pin37=PE9
+Mcu.Pin38=PE10
+Mcu.Pin39=PE11
 Mcu.Pin4=PE6
-Mcu.Pin40=PH8
-Mcu.Pin41=PH10
-Mcu.Pin42=PH11
-Mcu.Pin43=PD8
-Mcu.Pin44=PD9
-Mcu.Pin45=PD10
-Mcu.Pin46=PD11
-Mcu.Pin47=PD12
-Mcu.Pin48=PD14
-Mcu.Pin49=PD15
+Mcu.Pin40=PE12
+Mcu.Pin41=PE13
+Mcu.Pin42=PE14
+Mcu.Pin43=PE15
+Mcu.Pin44=PB10
+Mcu.Pin45=PB11
+Mcu.Pin46=PH8
+Mcu.Pin47=PH10
+Mcu.Pin48=PH11
+Mcu.Pin49=PD8
 Mcu.Pin5=PI8
-Mcu.Pin50=PG2
-Mcu.Pin51=PG3
-Mcu.Pin52=PG4
-Mcu.Pin53=PG5
-Mcu.Pin54=PG6
-Mcu.Pin55=PG7
-Mcu.Pin56=PC7
-Mcu.Pin57=PC8
-Mcu.Pin58=PC9
-Mcu.Pin59=PA8
+Mcu.Pin50=PD9
+Mcu.Pin51=PD10
+Mcu.Pin52=PD11
+Mcu.Pin53=PD12
+Mcu.Pin54=PD14
+Mcu.Pin55=PD15
+Mcu.Pin56=PG2
+Mcu.Pin57=PG3
+Mcu.Pin58=PG4
+Mcu.Pin59=PG5
 Mcu.Pin6=PC13
-Mcu.Pin60=PA9
-Mcu.Pin61=PA10
-Mcu.Pin62=PA11
-Mcu.Pin63=PA12
-Mcu.Pin64=PA13
-Mcu.Pin65=PH14
-Mcu.Pin66=PI2
-Mcu.Pin67=PA14
-Mcu.Pin68=PA15
-Mcu.Pin69=PC10
+Mcu.Pin60=PG6
+Mcu.Pin61=PG7
+Mcu.Pin62=PC6
+Mcu.Pin63=PC7
+Mcu.Pin64=PC8
+Mcu.Pin65=PC9
+Mcu.Pin66=PA13
+Mcu.Pin67=PH14
+Mcu.Pin68=PI2
+Mcu.Pin69=PA14
 Mcu.Pin7=PC14/OSC32_IN
-Mcu.Pin70=PC11
-Mcu.Pin71=PC12
-Mcu.Pin72=PD0
-Mcu.Pin73=PD1
-Mcu.Pin74=PD4
-Mcu.Pin75=PD5
-Mcu.Pin76=PD6
-Mcu.Pin77=PD7
-Mcu.Pin78=PG10
-Mcu.Pin79=PG11
+Mcu.Pin70=PA15
+Mcu.Pin71=PC10
+Mcu.Pin72=PC11
+Mcu.Pin73=PC12
+Mcu.Pin74=PD0
+Mcu.Pin75=PD1
+Mcu.Pin76=PD4
+Mcu.Pin77=PD5
+Mcu.Pin78=PD6
+Mcu.Pin79=PD7
 Mcu.Pin8=PC15/OSC32_OUT
-Mcu.Pin80=PG12
-Mcu.Pin81=PG13
-Mcu.Pin82=PB6
-Mcu.Pin83=PB7
-Mcu.Pin84=PB8
-Mcu.Pin85=PB9
-Mcu.Pin86=PE0
-Mcu.Pin87=PE1
-Mcu.Pin88=PI4
-Mcu.Pin89=PI5
+Mcu.Pin80=PG10
+Mcu.Pin81=PG11
+Mcu.Pin82=PG12
+Mcu.Pin83=PG13
+Mcu.Pin84=PB3
+Mcu.Pin85=PB6
+Mcu.Pin86=PB7
+Mcu.Pin87=PB8
+Mcu.Pin88=PB9
+Mcu.Pin89=PE0
 Mcu.Pin9=PI9
-Mcu.Pin90=PI6
-Mcu.Pin91=PI7
-Mcu.Pin92=VP_SYS_VS_Systick
-Mcu.PinsNb=93
+Mcu.Pin90=PE1
+Mcu.Pin91=PI4
+Mcu.Pin92=PI5
+Mcu.Pin93=PI6
+Mcu.Pin94=PI7
+Mcu.Pin95=VP_SYS_VS_Systick
+Mcu.PinsNb=96
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429IITx
@@ -123,28 +126,12 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=DISP_AD2
-PA10.Locked=true
-PA10.Signal=GPIO_Input
-PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=DISP_AD3
-PA11.Locked=true
-PA11.Signal=GPIO_Input
-PA12.GPIOParameters=GPIO_Label
-PA12.GPIO_Label=DISP_AD4
-PA12.Locked=true
-PA12.Signal=GPIO_Input
-PA13.GPIOParameters=GPIO_Label
-PA13.GPIO_Label=DISP_AD5
 PA13.Locked=true
-PA13.Signal=GPIO_Input
-PA14.GPIOParameters=GPIO_Label
-PA14.GPIO_Label=DISP_AD6
+PA13.Signal=SYS_JTMS-SWDIO
 PA14.Locked=true
-PA14.Signal=GPIO_Input
+PA14.Signal=SYS_JTCK-SWCLK
 PA15.GPIOParameters=GPIO_Label
-PA15.GPIO_Label=DISP_AD7
+PA15.GPIO_Label=SEL_2
 PA15.Locked=true
 PA15.Signal=GPIO_Input
 PA3.Mode=RGB666
@@ -152,14 +139,6 @@ PA3.Signal=LTDC_B5
 PA4.Signal=COMP_DAC1_group
 PA6.Mode=RGB666
 PA6.Signal=LTDC_G2
-PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=DISP_AD0
-PA8.Locked=true
-PA8.Signal=GPIO_Input
-PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=DISP_AD1
-PA9.Locked=true
-PA9.Signal=GPIO_Input
 PB0.Mode=RGB666
 PB0.Signal=LTDC_R3
 PB1.Mode=RGB666
@@ -168,6 +147,8 @@ PB10.Mode=RGB666
 PB10.Signal=LTDC_G4
 PB11.Mode=RGB666
 PB11.Signal=LTDC_G5
+PB3.Locked=true
+PB3.Signal=SYS_JTDO-SWO
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=RL5
 PB6.Locked=true
@@ -180,38 +161,66 @@ PB8.Mode=RGB666
 PB8.Signal=LTDC_B6
 PB9.Mode=RGB666
 PB9.Signal=LTDC_B7
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=FL_DISP
+PC0.Locked=true
+PC0.Signal=GPIO_Output
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=SEL_0
+PC1.Locked=true
+PC1.Signal=GPIO_Input
 PC10.GPIOParameters=GPIO_Label
-PC10.GPIO_Label=CS0
+PC10.GPIO_Label=AD2
 PC10.Locked=true
 PC10.Signal=GPIO_Input
 PC11.GPIOParameters=GPIO_Label
-PC11.GPIO_Label=CS1
+PC11.GPIO_Label=AD3
 PC11.Locked=true
 PC11.Signal=GPIO_Input
 PC12.GPIOParameters=GPIO_Label
-PC12.GPIO_Label=WR_DISP
+PC12.GPIO_Label=AD4
 PC12.Locked=true
 PC12.Signal=GPIO_Input
 PC13.GPIOParameters=GPIO_Label
-PC13.GPIO_Label=RD_DISP
+PC13.GPIO_Label=AD5
 PC13.Locked=true
 PC13.Signal=GPIO_Input
 PC14/OSC32_IN.GPIOParameters=GPIO_Label
-PC14/OSC32_IN.GPIO_Label=SEL_1
+PC14/OSC32_IN.GPIO_Label=AD6
 PC14/OSC32_IN.Locked=true
 PC14/OSC32_IN.Signal=GPIO_Input
 PC15/OSC32_OUT.GPIOParameters=GPIO_Label
-PC15/OSC32_OUT.GPIO_Label=SEL_2
+PC15/OSC32_OUT.GPIO_Label=AD7
 PC15/OSC32_OUT.Locked=true
 PC15/OSC32_OUT.Signal=GPIO_Input
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=CS0
+PC2.Locked=true
+PC2.Signal=GPIO_Input
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=CS1
+PC3.Locked=true
+PC3.Signal=GPIO_Input
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=WR_DISP
+PC4.Locked=true
+PC4.Signal=GPIO_Input
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=RD_DISP
+PC5.Locked=true
+PC5.Signal=GPIO_Input
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=SEL_1
+PC6.Locked=true
+PC6.Signal=GPIO_Input
 PC7.Mode=RGB666
 PC7.Signal=LTDC_G6
 PC8.GPIOParameters=GPIO_Label
-PC8.GPIO_Label=FL_DISP
+PC8.GPIO_Label=AD0
 PC8.Locked=true
 PC8.Signal=GPIO_Input
 PC9.GPIOParameters=GPIO_Label
-PC9.GPIO_Label=SEL_0
+PC9.GPIO_Label=AD1
 PC9.Locked=true
 PC9.Signal=GPIO_Input
 PD0.Signal=FMC_D2_DA2
