--- a/doc/Распиновка/Panel429IIT6/Panel429IIT6.ioc
+++ b/doc/Распиновка/Panel429IIT6/Panel429IIT6.ioc
@@ -63,53 +63,54 @@ Mcu.Pin50=PD9
 Mcu.Pin51=PD10
 Mcu.Pin52=PD11
 Mcu.Pin53=PD12
-Mcu.Pin54=PD14
-Mcu.Pin55=PD15
-Mcu.Pin56=PG2
-Mcu.Pin57=PG3
-Mcu.Pin58=PG4
-Mcu.Pin59=PG5
+Mcu.Pin54=PD13
+Mcu.Pin55=PD14
+Mcu.Pin56=PD15
+Mcu.Pin57=PG2
+Mcu.Pin58=PG3
+Mcu.Pin59=PG4
 Mcu.Pin6=PC13
-Mcu.Pin60=PG6
-Mcu.Pin61=PG7
-Mcu.Pin62=PC6
-Mcu.Pin63=PC7
-Mcu.Pin64=PC8
-Mcu.Pin65=PC9
-Mcu.Pin66=PA13
-Mcu.Pin67=PH14
-Mcu.Pin68=PI2
-Mcu.Pin69=PA14
+Mcu.Pin60=PG5
+Mcu.Pin61=PG6
+Mcu.Pin62=PG7
+Mcu.Pin63=PC6
+Mcu.Pin64=PC7
+Mcu.Pin65=PC8
+Mcu.Pin66=PC9
+Mcu.Pin67=PA13
+Mcu.Pin68=PH14
+Mcu.Pin69=PI2
 Mcu.Pin7=PC14/OSC32_IN
-Mcu.Pin70=PA15
-Mcu.Pin71=PC10
-Mcu.Pin72=PC11
-Mcu.Pin73=PC12
-Mcu.Pin74=PD0
-Mcu.Pin75=PD1
-Mcu.Pin76=PD4
-Mcu.Pin77=PD5
-Mcu.Pin78=PD6
-Mcu.Pin79=PD7
+Mcu.Pin70=PA14
+Mcu.Pin71=PA15
+Mcu.Pin72=PC10
+Mcu.Pin73=PC11
+Mcu.Pin74=PC12
+Mcu.Pin75=PD0
+Mcu.Pin76=PD1
+Mcu.Pin77=PD4
+Mcu.Pin78=PD5
+Mcu.Pin79=PD6
 Mcu.Pin8=PC15/OSC32_OUT
-Mcu.Pin80=PG10
-Mcu.Pin81=PG11
-Mcu.Pin82=PG12
-Mcu.Pin83=PG13
-Mcu.Pin84=PB3
-Mcu.Pin85=PB6
-Mcu.Pin86=PB7
-Mcu.Pin87=PB8
-Mcu.Pin88=PB9
-Mcu.Pin89=PE0
+Mcu.Pin80=PD7
+Mcu.Pin81=PG10
+Mcu.Pin82=PG11
+Mcu.Pin83=PG12
+Mcu.Pin84=PG13
+Mcu.Pin85=PB3
+Mcu.Pin86=PB6
+Mcu.Pin87=PB7
+Mcu.Pin88=PB8
+Mcu.Pin89=PB9
 Mcu.Pin9=PI9
-Mcu.Pin90=PE1
-Mcu.Pin91=PI4
-Mcu.Pin92=PI5
-Mcu.Pin93=PI6
-Mcu.Pin94=PI7
-Mcu.Pin95=VP_SYS_VS_Systick
-Mcu.PinsNb=96
+Mcu.Pin90=PE0
+Mcu.Pin91=PE1
+Mcu.Pin92=PI4
+Mcu.Pin93=PI5
+Mcu.Pin94=PI6
+Mcu.Pin95=PI7
+Mcu.Pin96=VP_SYS_VS_Systick
+Mcu.PinsNb=97
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429IITx
@@ -228,6 +229,8 @@ PD1.Signal=FMC_D3_DA3
 PD10.Signal=FMC_D15_DA15
 PD11.Signal=FMC_A16_CLE
 PD12.Signal=FMC_A17_ALE
+PD13.Locked=true
+PD13.Signal=FMC_A18
 PD14.Signal=FMC_D0_DA0
 PD15.Signal=FMC_D1_DA1
 PD4.Signal=FMC_NOE
@@ -418,6 +421,8 @@ SH.FMC_A16_CLE.0=FMC_A16,18b-a1
 SH.FMC_A16_CLE.ConfNb=1
 SH.FMC_A17_ALE.0=FMC_A17,18b-a1
 SH.FMC_A17_ALE.ConfNb=1
+SH.FMC_A18.0=FMC_A18
+SH.FMC_A18.ConfNb=1
 SH.FMC_A2.0=FMC_A2,18b-a1
 SH.FMC_A2.ConfNb=1
 SH.FMC_A3.0=FMC_A3,18b-a1
